deployment/floskl-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: floskl
  labels:
    app: floskl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: floskl
  template:
    metadata:
      labels:
        app: floskl

    spec: 
        containers:
        - name: floskl
          image: ghcr.io/uivraeus/floskl:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
