deployment/floskl-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: floskl
  name: floskl
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: floskl
